Auth Guard Successfully Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div>
-  <p-button label="Check"></p-button>
-</div>
-<button type="button" class="btn btn-secondary">Secondary</button>
+<router-outlet></router-outlet>
